Fixing overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,7 @@
 @import '../sass/variables';
+
+.container {
+  overflow: auto;
+  height: 100%;
+  padding: 10px;
+}
