--- a/src/app/entities/users/users.component.scss
+++ b/src/app/entities/users/users.component.scss
@@ -3,8 +3,15 @@
     display: none;
   }
 }
+
 .table-hover:hover {
   .trash {
     display: inline;
   }
 }
+
+.float-end {
+  isplay: flex;
+  justify-content: flex-end;
+}
+
