--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,7 @@ body {
   border-radius: 6px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
+
+.ng-trigger {
+  position: static !important;
+}
